src/sass/layout/_header-hero.scss
// animation
.hero__picture--icecream {
  animation-duration: 1000ms;
}

.hero__picture--girl {
  animation-duration: 1000ms;
  animation-delay: 500ms;
}
.hero__left {
  animation-duration: 1000ms;
  animation-delay: 500ms;
}

// .hero__picture--girl.animate__tada {
//   animation-delay: 2s;
// }

// BACK TO TOP!!!!!
.back_to_top {
  position: fixed;

  // display: block;
  opacity: 1;
  transition: opacity 250ms $effect;
  bottom: 40px;
  right: 20px;
  z-index: 9999;
  width: 40px;
  height: 40px;
  line-height: 30px;
  background-color: $second-bg-color;
  color: #444;
  cursor: pointer;
  border: none;
  border-radius: 50%;
  // display: none;
  fill: #ffffff;

  transform: rotate(-90deg);

  @media screen and (min-width: 768px) {
    bottom: 60px;
    right: 30px;
  }

  @media screen and (min-width: 1280px) {
    bottom: 80px;
    right: 40px;
  }
  &:hover,
  &:focus {
    background-color: $accent;
  }
}

.back_to_top-hidden {
  width: 1px;
  height: 1px;
  margin: -1px;
  padding: 0;
  overflow: hidden;
  border: 0;
  clip: rect(0 0 0 0);

  opacity: 0;

  transition: opacity 250ms $effect;
}

// BACK TO TOP!!!!!
.header,
.hero {
  background-color: $second-bg-color;
}
.header .container {
  @media screen and (max-width: 767px) {
    max-width: 767px;
  }
}

.nav {
  display: flex;
  align-items: center;
  padding-top: 6px;

  @media screen and (min-width: 768px) {
    padding-top: 37px;
  }
  &__logo {
    flex-shrink: 0;
    @media screen and (min-width: 1280px) {
      position: relative;
      left: -70px;
    }
  }
  &__btn {
    margin-left: auto;
    padding: 0;
    border: none;
    background-color: transparent;
    fill: $accent;
    @media screen and (min-width: 1280px) {
      display: none;
    }
  }
  &__icon-open {
    position: relative;
    z-index: 2;
    height: 35px;
    width: 35px;

    fill: $accent;

    transition: fill 250ms $effect;

    &:hover,
    &:focus {
      fill: #c7133e;
    }
  }
  &__icon-close {
    height: 25px;
    width: 25px;
    position: absolute;
    right: 18px;
    top: 13px;

    fill: #ffffff;

    transition: fill 250ms $effect;
    &:hover,
    &:focus {
      fill: $accent;
    }
  }
  &__box {
    display: flex;
    z-index: 4;
    @media screen and (max-width: 1279px) {
      position: fixed;
      top: 0;
      right: 0;
      padding-top: 60px;
      padding-left: 20px;
      padding-right: 20px;

      flex-direction: column-reverse;
      justify-content: flex-end;

      height: 100%;
      width: 250px;
      background-color: #e17992;

      transform: translateX(100%);
      transition: transform 300ms $effect;
      &.is-open {
        transform: translateX(0);
      }
    }
    @media screen and (min-width: 1280px) {
      align-items: center;
      position: relative;
      width: 100%;
      margin-left: 40px;
    }
  }
  &__list {
    @media screen and (min-width: 1280px) {
      display: flex;
    }
  }
  &__item {
    @media screen and (max-width: 1279px) {
      position: relative;
      &:nth-child(2n + 1) {
        // background-image: linear-gradient(
        //   to top,
        //   #e18298 0px 1px,
        //   transparent 1px 43px,
        //   #e18298 43px 44px
        // );

        & .nav__link::before {
          content: '';
          position: absolute;
          top: 0;
          left: 0;
          width: 100%;
          height: 1px;
          background-color: #e18298;
        }
        & .nav__link::after {
          content: '';
          position: absolute;
          bottom: 0;
          left: 0;
          width: 100%;
          height: 1px;
          background-color: #e18298;
        }
      }
    }
    @media screen and (min-width: 1280px) {
      &:not(:last-child) {
        margin-right: 35px;
      }
    }
  }
  &__link {
    display: block;
    padding-top: 13px;
    padding-bottom: 13px;

    font-weight: 700;
    font-size: 14px;
    line-height: 1.29;

    color: #ffffff;

    transition: color 250ms $effect;
    &.current {
      color: $accent;
    }
    &:hover,
    &:focus {
      color: $accent;
    }
    @media screen and (min-width: 1280px) {
      font-size: 16px;
      line-height: 1.31;
    }
  }
}

.header__btn {
  font-size: 16px;
  line-height: 1.31;
  margin-bottom: 20px;
  @media screen and (min-width: 1280px) {
    margin-bottom: 0;
    margin-left: auto;
  }

  &--mob {
    @media screen and (max-width: 767px), (min-width: 1280px) {
      display: none;
    }
    @media screen and (min-width: 768px) and (max-width: 1279px) {
      margin-left: 25px;

      position: relative;
      z-index: 3;
    }
  }
}
/* ... */

